--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.10.0",
-    "@nuxt/ui": "^2.12.0"
+    "@nuxt/ui": "^2.12.0",
+    "@vercel/speed-insights": "^1.0.3"
   }
 }
